--- a/KotlinExampleMyTrip/app/src/main/res/values/strings.xml
+++ b/KotlinExampleMyTrip/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyTrip</string>
+    <string name="distance">Distance</string>
+    <string name="price">Price</string>
+    <string name="autonomy">Autonomy</string>
 </resources>
